--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
-        <receiver android:name=".util.AlarmReceiver"/>
+        <receiver android:name=".receiver.MedicinesNotificationReceiver"/>
     </application>
 
 </manifest>
