Исправил удаление уведомлений, сделал новый класс для уведомлений, исправил несколько моментов в дизайне, добавил клик на ближайшее действие на главном экране, поправил навигацию. Добавил разрешение на уведомления и автозапуск

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.QUICKBOOT_POWERON" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:name=".App"
@@ -35,16 +37,29 @@
             android:resource="@array/preloaded_fonts" />
 
         <receiver
-            android:name=".model.medicines.receiver.BootReceiver"
-            android:enabled="true"
-            android:exported="false">
+            android:name="com.example.healthcheck.model.medicines.receiver.MedicinesBootReceiver"
+            android:enabled="false"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <action android:name="android.intent.action.QUICKBOOT_POWERON" />
+                <action android:name="com.htc.intent.action.QUICKBOOT_POWERON" />
+            </intent-filter>
+        </receiver>
+
+        <receiver
+            android:name="com.example.healthcheck.model.global_notifications.receiver.NotificationBootReceiver"
+            android:enabled="false"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.QUICKBOOT_POWERON" />
+                <action android:name="com.htc.intent.action.QUICKBOOT_POWERON" />
             </intent-filter>
         </receiver>
 
         <receiver android:name=".model.medicines.receiver.MedicinesNotificationReceiver"/>
+        <receiver android:name=".model.global_notifications.receiver.NotificationReceiver" />
 
     </application>
 
