--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,15 @@
             </intent-filter>
         </receiver>
 
+        <receiver
+            android:name=".notifications.receiver.DateChangedBroadcastReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.TIME_TICK"/>
+                <action android:name="android.intent.action.TIMEZONE_CHANGED"/>
+            </intent-filter>
+        </receiver>
+
         <receiver android:name=".notifications.receiver.MedicinesNotificationReceiver"/>
         <receiver android:name=".notifications.receiver.NotificationReceiver" />
 
