--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
 
+    //autoStart
+    implementation 'com.github.judemanutd:autostarter:1.1.0'
+
 
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
